restores project files

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,14 @@ local.properties
 .settings/
 .loadpath
 
+# Ignore generated files
+DSLTransEditor2.0/src/
+DSLTransEditor2.0.editor/src/
+DSLTransEditor2.0.diagram/src/
+DSLTransEditor2.0.edit/src/
+DSLTransEditor2.0.diagram/plugin.xml
+
+
 # External tool builders
 .externalToolBuilders/
 
