--- a/DSLTransEditor2.0.diagram/build.properties
+++ b/DSLTransEditor2.0.diagram/build.properties
@@ -6,5 +6,6 @@ bin.includes = .,\
                messages.properties,\
                .options
 jars.compile.order = .
-source.. = src/
+source.. = src/,\
+           non-gen/
 output.. = bin/
