added lib to prolog java

--- a/Transformer2.0/build.properties
+++ b/Transformer2.0/build.properties
@@ -12,6 +12,7 @@ bin.includes = .,\
                src/emfInterpreter/,\
                src/transformerProcessor/,\
                lib/jpl.jar,\
+               lib/jiprolog-4.1.5.1.jar,\
                lib/tools.jar,\
                lib/jpl.dll,\
                lib/diffutils-1.2.1.jar,\
