port to jpi prolog done

--- a/.gitignore
+++ b/.gitignore
@@ -238,3 +238,4 @@ DSLTransEditor2.0/model/DSLTrans.gmfgen
 DSLTransEditor2.0/model/DSLTrans.gmfmap
 DSLTransEditor2.0/model/DSLTrans.gmfgraph
 DSLTransEditor2.0/model/DSLTrans.gmftool
+Transformer2.0/last_execution_dump.txt
