--- a/Transformer2.0/build.properties
+++ b/Transformer2.0/build.properties
@@ -9,11 +9,9 @@ bin.includes = .,\
                META-INF/,\
                plugin.properties,\
                lib/,\
-               src/emfInterpreter/,\
-               src/transformerProcessor/,\
+               src/dsltrans/,\
                lib/jiprolog-4.1.5.1.jar,\
                lib/tools.jar,\
-               lib/diffutils-1.2.1.jar,\
-               src/post_processor/
+               lib/diffutils-1.2.1.jar
 source.. = src/
 output.. = bin/
