--- a/Transformer2.0/build.properties
+++ b/Transformer2.0/build.properties
@@ -9,9 +9,7 @@ bin.includes = .,\
                META-INF/,\
                plugin.properties,\
                lib/,\
-               src/dsltrans/,\
-               lib/jiprolog-4.1.5.1.jar,\
-               lib/tools.jar,\
-               lib/diffutils-1.2.1.jar
+               lib/diffutils-1.2.1.jar,\
+               src/
 source.. = src/
 output.. = bin/
