--- a/DSLTransEngine/build.properties
+++ b/DSLTransEngine/build.properties
@@ -1,8 +1,2 @@
-source.DSLTransEngine.jar = src/
 bin.includes = META-INF/,\
-               lib/jiprolog-4.1.5.1.jar,\
-               lib/tools.jar,\
-               lib/org.eclipse.emf.ecore_2.10.0.v20140514-1158.jar,\
-               lib/org.eclipse.emf.common_2.10.0.v20140514-1158.jar,\
-               DSLTransEngine.jar,\
-               src/
+               lib/
