dsltrans update site issues fixed.

--- a/DSLTransEditor2.0.diagram/plugin.properties
+++ b/DSLTransEditor2.0.diagram/plugin.properties
@@ -87,3 +87,16 @@ metatype.name.ClassRefClassRef_4014=Undefined
 cmdcategory.name=Dsltrans Editor Commands
 cmdcategory.desc=Dsltrans Editor Commands
 
+metatype.name.MatchMayBeSameRelation_4005=MatchMayBeSameRelation
+metatype.name.ApplyMayBeSameRelation_4006=ApplyMayBeSameRelation
+metatype.name.ApplyAssociation_4007=ApplyAssociation
+metatype.name.PositiveBackwardRestriction_4008=PositiveBackwardRestriction
+metatype.name.NegativeBackwardRestriction_4009=NegativeBackwardRestriction
+metatype.name.AttributeEquality_4010=AttributeEquality
+metatype.name.AttributeInequality_4011=AttributeInequality
+metatype.name.Import_4012=Import
+metatype.name.LayerPreviousSource_4013=Undefined
+metatype.name.MatchModelExplicitSource_4014=Undefined
+metatype.name.AttributeRefAttributeRef_4015=Undefined
+metatype.name.ClassRefClassRef_4016=Undefined
+
