--- a/DSLTransEditor2.0.diagram/plugin.xml
+++ b/DSLTransEditor2.0.diagram/plugin.xml
@@ -110,11 +110,12 @@
          </ViewId>
       </GlobalActionHandlerProvider>
       <GlobalActionHandlerProvider
-            class="dsltrans.diagram.providers.MyEditorGlobalActionHandlerProvider"
+            class="org.eclipse.gmf.runtime.diagram.ui.render.providers.DiagramUIRenderGlobalActionHandlerProvider"
             id="DsltransRender">
          <Priority name="Lowest"/>
          <ViewId id="dsltrans.diagram.part.DsltransDiagramEditorID">
             <ElementType class="org.eclipse.gmf.runtime.diagram.ui.editparts.IGraphicalEditPart">
+               <GlobalActionId actionId="cut"/>
                <GlobalActionId actionId="copy"/>
                <GlobalActionId actionId="paste"/>
             </ElementType>
@@ -258,7 +259,7 @@
          <context viewClass="org.eclipse.gmf.runtime.notation.Node" containerViews="referencing-diagrams"/>
          <context viewClass="org.eclipse.gmf.runtime.notation.Diagram" semanticHints="Dsltrans"/>
          <context viewClass="org.eclipse.gmf.runtime.notation.Node" semanticHints="2001,2002,3001,3002,3003,3004,3005,3006,3007,3008,3009,3010,3011,3012,3013,3014,3015,3016,3017,3018,3019,3020,3021,3022,3023,3024,3025,3026,3027,3028,3029,3030,3031,3032,3033"/>
-         <context viewClass="org.eclipse.gmf.runtime.notation.Edge" semanticHints="4001,4002,4003,4004,4017,4018,4005,4006,4007,4015,4016,4010,4011,4012,4013,4014"/>
+         <context viewClass="org.eclipse.gmf.runtime.notation.Edge" semanticHints="4001,4002,4003,4004,4005,4006,4007,4008,4009,4010,4011,4012,4013,4014,4015,4016"/>
       </viewProvider>
    </extension>
 
@@ -273,10 +274,10 @@
             <method name="getType()" value="2001,2002,3001,3002,3003,3004,3005,3006,3007,3008,3009,3010,3011,3012,3013,3014,3015,3016,3017,3018,3019,3020,3021,3022,3023,3024,3025,3026,3027,3028,3029,3030,3031,3032,3033"/>
          </object>
          <object class="org.eclipse.gmf.runtime.notation.Edge" id="generated-links">
-            <method name="getType()" value="4001,4002,4003,4004,4017,4018,4005,4006,4007,4015,4016,4010,4011,4012,4013,4014"/>
+            <method name="getType()" value="4001,4002,4003,4004,4005,4006,4007,4008,4009,4010,4011,4012,4013,4014,4015,4016"/>
          </object>
          <object class="org.eclipse.gmf.runtime.notation.Node" id="generated-labels">
-            <method name="getType()" value="5034,5035,5001,5033,5005,5004,5002,5003,5006,5007,5031,5030,5010,5015,5018"/>
+            <method name="getType()" value="5014,5015,5001,5013,5005,5004,5002,5003,5006,5007,5012,5011,5008,5009,5010"/>
          </object>
          <object class="org.eclipse.gmf.runtime.notation.Node" id="generated-compartments">
             <method name="getType()" value="7001,7002,7003,7004,7005,7006,7007,7008,7009,7010,7011,7012,7013,7014,7015,7016,7017,7018,7019"/>
@@ -884,106 +885,88 @@
       </metamodel>
       <metamodel nsURI="http://dsltrans/2.0">
          <metamodelType
-               id="DSLTransEditor2.0.diagram.MatchMayBeSameRelation_4017"
-               name="%metatype.name.MatchMayBeSameRelation_4017"
+               id="DSLTransEditor2.0.diagram.MatchMayBeSameRelation_4005"
+               name="%metatype.name.MatchMayBeSameRelation_4005"
                kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
                eclass="MatchMayBeSameRelation"
                edithelper="dsltrans.diagram.edit.helpers.MatchMayBeSameRelationEditHelper">
-            <param name="semanticHint" value="4017"/>
-         </metamodelType>
-      </metamodel>
-      <metamodel nsURI="http://dsltrans/2.0">
-         <metamodelType
-               id="DSLTransEditor2.0.diagram.ApplyMayBeSameRelation_4018"
-               name="%metatype.name.ApplyMayBeSameRelation_4018"
-               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
-               eclass="ApplyMayBeSameRelation"
-               edithelper="dsltrans.diagram.edit.helpers.ApplyMayBeSameRelationEditHelper">
-            <param name="semanticHint" value="4018"/>
-         </metamodelType>
-      </metamodel>
-      <metamodel nsURI="http://dsltrans/2.0">
-         <metamodelType
-               id="DSLTransEditor2.0.diagram.ApplyAssociation_4005"
-               name="%metatype.name.ApplyAssociation_4005"
-               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
-               eclass="ApplyAssociation"
-               edithelper="dsltrans.diagram.edit.helpers.ApplyAssociationEditHelper">
             <param name="semanticHint" value="4005"/>
          </metamodelType>
       </metamodel>
       <metamodel nsURI="http://dsltrans/2.0">
          <metamodelType
-               id="DSLTransEditor2.0.diagram.PositiveBackwardRestriction_4006"
-               name="%metatype.name.PositiveBackwardRestriction_4006"
+               id="DSLTransEditor2.0.diagram.ApplyMayBeSameRelation_4006"
+               name="%metatype.name.ApplyMayBeSameRelation_4006"
                kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
-               eclass="PositiveBackwardRestriction"
-               edithelper="dsltrans.diagram.edit.helpers.PositiveBackwardRestrictionEditHelper">
+               eclass="ApplyMayBeSameRelation"
+               edithelper="dsltrans.diagram.edit.helpers.ApplyMayBeSameRelationEditHelper">
             <param name="semanticHint" value="4006"/>
          </metamodelType>
       </metamodel>
       <metamodel nsURI="http://dsltrans/2.0">
          <metamodelType
-               id="DSLTransEditor2.0.diagram.NegativeBackwardRestriction_4007"
-               name="%metatype.name.NegativeBackwardRestriction_4007"
+               id="DSLTransEditor2.0.diagram.ApplyAssociation_4007"
+               name="%metatype.name.ApplyAssociation_4007"
                kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
-               eclass="NegativeBackwardRestriction"
-               edithelper="dsltrans.diagram.edit.helpers.NegativeBackwardRestrictionEditHelper">
+               eclass="ApplyAssociation"
+               edithelper="dsltrans.diagram.edit.helpers.ApplyAssociationEditHelper">
             <param name="semanticHint" value="4007"/>
          </metamodelType>
       </metamodel>
       <metamodel nsURI="http://dsltrans/2.0">
          <metamodelType
-               id="DSLTransEditor2.0.diagram.AttributeEquality_4015"
-               name="%metatype.name.AttributeEquality_4015"
+               id="DSLTransEditor2.0.diagram.PositiveBackwardRestriction_4008"
+               name="%metatype.name.PositiveBackwardRestriction_4008"
+               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
+               eclass="PositiveBackwardRestriction"
+               edithelper="dsltrans.diagram.edit.helpers.PositiveBackwardRestrictionEditHelper">
+            <param name="semanticHint" value="4008"/>
+         </metamodelType>
+      </metamodel>
+      <metamodel nsURI="http://dsltrans/2.0">
+         <metamodelType
+               id="DSLTransEditor2.0.diagram.NegativeBackwardRestriction_4009"
+               name="%metatype.name.NegativeBackwardRestriction_4009"
+               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
+               eclass="NegativeBackwardRestriction"
+               edithelper="dsltrans.diagram.edit.helpers.NegativeBackwardRestrictionEditHelper">
+            <param name="semanticHint" value="4009"/>
+         </metamodelType>
+      </metamodel>
+      <metamodel nsURI="http://dsltrans/2.0">
+         <metamodelType
+               id="DSLTransEditor2.0.diagram.AttributeEquality_4010"
+               name="%metatype.name.AttributeEquality_4010"
                kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
                eclass="AttributeEquality"
                edithelper="dsltrans.diagram.edit.helpers.AttributeEqualityEditHelper">
-            <param name="semanticHint" value="4015"/>
-         </metamodelType>
-      </metamodel>
-      <metamodel nsURI="http://dsltrans/2.0">
-         <metamodelType
-               id="DSLTransEditor2.0.diagram.AttributeInequality_4016"
-               name="%metatype.name.AttributeInequality_4016"
-               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
-               eclass="AttributeInequality"
-               edithelper="dsltrans.diagram.edit.helpers.AttributeInequalityEditHelper">
-            <param name="semanticHint" value="4016"/>
-         </metamodelType>
-      </metamodel>
-      <metamodel nsURI="http://dsltrans/2.0">
-         <metamodelType
-               id="DSLTransEditor2.0.diagram.Import_4010"
-               name="%metatype.name.Import_4010"
-               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
-               eclass="Import"
-               edithelper="dsltrans.diagram.edit.helpers.ImportEditHelper">
             <param name="semanticHint" value="4010"/>
          </metamodelType>
       </metamodel>
       <metamodel nsURI="http://dsltrans/2.0">
-         <specializationType
-               id="DSLTransEditor2.0.diagram.LayerPreviousSource_4011"
-               name="%metatype.name.LayerPreviousSource_4011"
-               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType">
-            <specializes id="org.eclipse.gmf.runtime.emf.type.core.null"/>
+         <metamodelType
+               id="DSLTransEditor2.0.diagram.AttributeInequality_4011"
+               name="%metatype.name.AttributeInequality_4011"
+               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
+               eclass="AttributeInequality"
+               edithelper="dsltrans.diagram.edit.helpers.AttributeInequalityEditHelper">
             <param name="semanticHint" value="4011"/>
-         </specializationType>
+         </metamodelType>
       </metamodel>
       <metamodel nsURI="http://dsltrans/2.0">
-         <specializationType
-               id="DSLTransEditor2.0.diagram.MatchModelExplicitSource_4012"
-               name="%metatype.name.MatchModelExplicitSource_4012"
-               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType">
-            <specializes id="org.eclipse.gmf.runtime.emf.type.core.null"/>
+         <metamodelType
+               id="DSLTransEditor2.0.diagram.Import_4012"
+               name="%metatype.name.Import_4012"
+               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
+               eclass="Import"
+               edithelper="dsltrans.diagram.edit.helpers.ImportEditHelper">
             <param name="semanticHint" value="4012"/>
-         </specializationType>
+         </metamodelType>
       </metamodel>
       <metamodel nsURI="http://dsltrans/2.0">
          <specializationType
-               id="DSLTransEditor2.0.diagram.AttributeRefAttributeRef_4013"
-               name="%metatype.name.AttributeRefAttributeRef_4013"
+               id="DSLTransEditor2.0.diagram.LayerPreviousSource_4013"
+               name="%metatype.name.LayerPreviousSource_4013"
                kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType">
             <specializes id="org.eclipse.gmf.runtime.emf.type.core.null"/>
             <param name="semanticHint" value="4013"/>
@@ -991,11 +974,29 @@
       </metamodel>
       <metamodel nsURI="http://dsltrans/2.0">
          <specializationType
-               id="DSLTransEditor2.0.diagram.ClassRefClassRef_4014"
-               name="%metatype.name.ClassRefClassRef_4014"
+               id="DSLTransEditor2.0.diagram.MatchModelExplicitSource_4014"
+               name="%metatype.name.MatchModelExplicitSource_4014"
                kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType">
             <specializes id="org.eclipse.gmf.runtime.emf.type.core.null"/>
             <param name="semanticHint" value="4014"/>
+         </specializationType>
+      </metamodel>
+      <metamodel nsURI="http://dsltrans/2.0">
+         <specializationType
+               id="DSLTransEditor2.0.diagram.AttributeRefAttributeRef_4015"
+               name="%metatype.name.AttributeRefAttributeRef_4015"
+               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType">
+            <specializes id="org.eclipse.gmf.runtime.emf.type.core.null"/>
+            <param name="semanticHint" value="4015"/>
+         </specializationType>
+      </metamodel>
+      <metamodel nsURI="http://dsltrans/2.0">
+         <specializationType
+               id="DSLTransEditor2.0.diagram.ClassRefClassRef_4016"
+               name="%metatype.name.ClassRefClassRef_4016"
+               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType">
+            <specializes id="org.eclipse.gmf.runtime.emf.type.core.null"/>
+            <param name="semanticHint" value="4016"/>
          </specializationType>
       </metamodel>
    </extension>
@@ -1050,18 +1051,18 @@
          <elementType ref="DSLTransEditor2.0.diagram.NegativeIndirectAssociation_4002"/>
          <elementType ref="DSLTransEditor2.0.diagram.PositiveMatchAssociation_4003"/>
          <elementType ref="DSLTransEditor2.0.diagram.NegativeMatchAssociation_4004"/>
-         <elementType ref="DSLTransEditor2.0.diagram.MatchMayBeSameRelation_4017"/>
-         <elementType ref="DSLTransEditor2.0.diagram.ApplyMayBeSameRelation_4018"/>
-         <elementType ref="DSLTransEditor2.0.diagram.ApplyAssociation_4005"/>
-         <elementType ref="DSLTransEditor2.0.diagram.PositiveBackwardRestriction_4006"/>
-         <elementType ref="DSLTransEditor2.0.diagram.NegativeBackwardRestriction_4007"/>
-         <elementType ref="DSLTransEditor2.0.diagram.AttributeEquality_4015"/>
-         <elementType ref="DSLTransEditor2.0.diagram.AttributeInequality_4016"/>
-         <elementType ref="DSLTransEditor2.0.diagram.Import_4010"/>
-         <elementType ref="DSLTransEditor2.0.diagram.LayerPreviousSource_4011"/>
-         <elementType ref="DSLTransEditor2.0.diagram.MatchModelExplicitSource_4012"/>
-         <elementType ref="DSLTransEditor2.0.diagram.AttributeRefAttributeRef_4013"/>
-         <elementType ref="DSLTransEditor2.0.diagram.ClassRefClassRef_4014"/>
+         <elementType ref="DSLTransEditor2.0.diagram.MatchMayBeSameRelation_4005"/>
+         <elementType ref="DSLTransEditor2.0.diagram.ApplyMayBeSameRelation_4006"/>
+         <elementType ref="DSLTransEditor2.0.diagram.ApplyAssociation_4007"/>
+         <elementType ref="DSLTransEditor2.0.diagram.PositiveBackwardRestriction_4008"/>
+         <elementType ref="DSLTransEditor2.0.diagram.NegativeBackwardRestriction_4009"/>
+         <elementType ref="DSLTransEditor2.0.diagram.AttributeEquality_4010"/>
+         <elementType ref="DSLTransEditor2.0.diagram.AttributeInequality_4011"/>
+         <elementType ref="DSLTransEditor2.0.diagram.Import_4012"/>
+         <elementType ref="DSLTransEditor2.0.diagram.LayerPreviousSource_4013"/>
+         <elementType ref="DSLTransEditor2.0.diagram.MatchModelExplicitSource_4014"/>
+         <elementType ref="DSLTransEditor2.0.diagram.AttributeRefAttributeRef_4015"/>
+         <elementType ref="DSLTransEditor2.0.diagram.ClassRefClassRef_4016"/>
          <advice ref="org.eclipse.gmf.runtime.diagram.core.advice.notationDepdendents"/>
       </binding>
    </extension>
